--- a/bin/php/php.ini
+++ b/bin/php/php.ini
@@ -404,7 +404,7 @@ expose_php = On
 ; Maximum execution time of each script, in seconds
 ; https://php.net/max-execution-time
 ; Note: This directive is hardcoded to 0 for the CLI SAPI
-max_execution_time = 36000
+max_execution_time = 360000
 
 ; Maximum amount of time each script may spend parsing request data. It's a good
 ; idea to limit this time on productions servers in order to eliminate unexpectedly
@@ -414,14 +414,14 @@ max_execution_time = 36000
 ; Development Value: 60 (60 seconds)
 ; Production Value: 60 (60 seconds)
 ; https://php.net/max-input-time
-max_input_time = 60
+max_input_time = 600
 
 ; Maximum input variable nesting level
 ; https://php.net/max-input-nesting-level
 ;max_input_nesting_level = 64
 
 ; How many GET/POST/COOKIE input variables may be accepted
-;max_input_vars = 1000
+max_input_vars = 9000
 
 ; Maximum amount of memory a script may consume
 ; https://php.net/memory-limit
@@ -916,7 +916,7 @@ default_socket_timeout = 60
 ;   Be sure to appropriately set the extension_dir directive.
 ;
 ;extension=bz2
-extension=curl
+;extension=curl
 ;extension=ffi
 ;extension=ftp
 extension=fileinfo
