--- a/bin/php/php.ini
+++ b/bin/php/php.ini
@@ -928,7 +928,7 @@ extension=intl
 ;extension=ldap
 extension=mbstring
 extension=exif      ; Must be after mbstring as it depends on it
-;extension=mysqli
+extension=mysqli
 ;extension=oci8_12c  ; Use with Oracle Database 12c Instant Client
 ;extension=oci8_19  ; Use with Oracle Database 19 Instant Client
 ;extension=odbc
